Use java 8 for jitpack